--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
-    flavorDimensions "product", "server"
+    flavorDimensions "product", "side"
     productFlavors {
         bike {
             dimension "product"
@@ -35,7 +35,7 @@ android {
             dimension "side"
         }
         admin {
-            dimension "admin"
+            dimension "side"
         }
     }
 
