feat: setup firebase

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,13 +6,14 @@ plugins {
 
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-parcelize'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 30
     buildToolsVersion "30.0.3"
 
     defaultConfig {
-        applicationId "br.com.douglasmotta.whitelabeltutorial"
+        applicationId "com.bulletapps.whitelabel"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 1
